...
                    android:textSize="12sp"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_weight="0.25"
                    android:layout_margin="5dp"
                    android:layout_height="60dp"
                    android:drawableTop="@drawable/ic_happy_263a"
                    android:id="@+id/happy_button"
                    android:text="@string/happy_button_label"
                    android:layout_width="wrap_content" />
                <Button
                    android:textSize="12sp"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_weight="0.25"
                    android:layout_margin="5dp"
                    android:layout_height="60dp"
                    android:drawableTop="@drawable/ic_sad_2639"
                    android:id="@+id/sad_button"
                    android:text="@string/sad_button_label"
                    android:layout_width="wrap_content" />
                <Button
                    android:textSize="12sp"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_weight="0.25"
...
                    android:textSize="12sp"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_weight="0.25"
                    android:layout_margin="5dp"
                    android:layout_height="60dp"
                    android:drawableTop="@drawable/ic_shameful_1f612"
                    android:id="@+id/shameful_button"
                    android:text="@string/shameful_button_label"
                    android:layout_width="wrap_content" />

            </LinearLayout>

            <View
...
                    android:id="@+id/date_label" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/message" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider"
...

                    <android.support.v7.widget.AppCompatRadioButton
                        android:onClick="rbClick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/specify_soc_label"
                        android:id="@+id/specify_soc_rb"
                        android:textSize="14sp"/>

                    <Spinner
                        android:id="@+id/planets_spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />


                    <android.support.v7.widget.AppCompatRadioButton
                        android:onClick="rbClick"
...
                android:layout_marginBottom="20sp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location_on_black_24dp"/>
                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/include_location_checkbox_message" />
            </LinearLayout>

            <View
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Change Date"
                android:textStyle="bold"
                android:id="@+id/date_lbl" />
            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="calendar"/>

        </LinearLayout>
    </ScrollView>
...
            android:id="@+id/cancel" />

        <Button
            android:text="ADD MOOD EVENT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_mood_event" />



    </LinearLayout>

</RelativeLayout>
...
