...
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_action_update_mood"
        android:elevation="6dp"
        android:id="@+id/fab_updateMood"
        app:fabSize="mini"
        app:pressedTranslationZ="12dp"
        app:backgroundTint="@color/fab1_color"
        android:visibility="invisible"/>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:src="@drawable/ic_action_plus"
        android:elevation="6dp"
        android:id="@+id/fab_plus"
        app:pressedTranslationZ="12dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>

