...
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:paddingTop="10sp"
                android:textSize="@dimen/album_title" />

...
                android:layout_marginLeft="3dp"
                android:paddingTop="5dp"
                />


            <TextView
                android:id="@+id/trigger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/emoji"
                android:layout_marginBottom="17dp"
                android:layout_toEndOf="@+id/emoji"
                android:text="DSJAKFLA"
...
