<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="team21.pylonconstructor.UserSettingsActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/logout_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Logout"
        android:padding="20sp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#1f000000" />

    <TextView
        android:id="@+id/delete_account_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:padding="20sp"
        android:text="Delete Account"/>


</LinearLayout>
