...
            android:id="@+id/register_user_button" />

        <Button
            android:text="LOGIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_button" />
    </LinearLayout>



</RelativeLayout>
